[feat] add auth to user endpoints
